Fixed alignment.

--- a/mapstory/static/style/site/base.less
+++ b/mapstory/static/style/site/base.less
@@ -188,6 +188,10 @@ form {
     letter-spacing: 1px;
   }
 
+  .organization_hero {
+    margin-left: 1em;
+  }
+
   .organization_icon {
     width: 7em;
     height: 7em;
